responsive design dark mode for menu bar fixed

--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@
 
 
 body{
-  background-image: linear-gradient(to bottom right , #ebe5fa, rgb(220, 209, 250), #efd7fa, rgb(209, 214, 250) );
+  background-image: linear-gradient(to bottom right , #fefeff, rgb(230, 222, 249), #efd7fa, rgb(209, 214, 250) );
 }
 
 html{
@@ -248,6 +248,10 @@ footer{
   margin: 0 25px;
 }
 
+#menuContainer {
+  background-color: rgb(48, 48, 49);
+}
+
 .navigation ul li a {
   text-decoration: none;
   transition: all 0.3s ease; 
@@ -436,7 +440,7 @@ input[type=text], input[type=email], select, textarea {
 }
 
 .dark-mode .navigation{
-  background-color:rgb(48, 48, 48);
+  background-color: #19191900
 }
 
 .dark-mode #about p {
@@ -488,33 +492,6 @@ input[type=text], input[type=email], select, textarea {
   display: none; /* Hide the menu button by default */
 }
 
-/* Show the menu button only on screens with a maximum width of 768px */
-@media (max-width: 768px) {
-  .menu-button-container {
-      display: block; /* Display the menu button on small screens */
-  }
-
-  .menu-container {
-      position: fixed;
-      top: 0;
-      right: -300px; /* Initially hide the menu */
-      width: 250px;
-      height: 100%;
-      background-color: white;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-      overflow-x: hidden;
-      transition: 0.3s;
-      z-index: 9999; /* Set a higher value for the z-index */
-      display: flex;
-      flex-direction: column;
-      align-items: center; /* Center align content horizontally */
-      padding-top: 60px; /* Adjust the padding for vertical centering */
-  }
-
-  .menu-container.menu-visible {
-      right: 0; /* Show the menu */
-  }
-}
 
 
 
@@ -525,6 +502,10 @@ input[type=text], input[type=email], select, textarea {
 
 /* Add a media query for smaller screens */
 @media (max-width: 768px) {
+
+  .menu-button-container {
+    display: block; /* Display the menu button on small screens */
+}
 
 
 
